--- a/newR.html
+++ b/newR.html
@@ -26,5 +26,11 @@
 				<div></div>
 			</div>
 		</div>
+		<div class="container-fluid">
+			<div class="main-box">
+				<h2></h2>
+				<div></div>
+			</div>
+		</div>
 	</body>
 </html>
