--- a/newR.html
+++ b/newR.html
@@ -1,79 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-		<style type="text/css">
-			body{
-				background:#ecf0f1;
-				color:#2c3e50;
-			}
-			.padding{
-				padding: 10px;
-			}
-			.vtop{
-				vertical-align: top;
-			}
-			#profile{
-				width:150px;
-				height:150px;
-				background-image: url("https://scontent-mia1-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/12644861_10153901322974393_5731141098433000644_n.jpg?oh=734921cab8e496d074db48f605a83e0e&oe=572B81E8");
-				background-size: contain;
-				position: relative;
-    			border-radius: 10%;
-				border: 2px solid #34495e;
-				display: inline-block;
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link href='https://fonts.googleapis.com/css?family=Raleway:500,300,700' rel='stylesheet' type='text/css'>
+	<style type="text/css">
+	body{
+		background:#f5f4f1;
+		color:#444;
+		font-family: "Raleway",Helvetica, Arial, sans-serif;
+		font-weight: 300;
+	}
+	h1,h2,h3,h4{
+		font-weight: 500;
+	}
+	a{
+		color: inherit;
+		cursor: pointer;
+		transition:color 1s ease;
+	}
+	a:hover{
+		color: black;
+		text-decoration: none;
+	}
+	.padding{
+		padding: 10px;
+	}
+	.vtop{
+		vertical-align: top;
+	}
+	.flexbox{
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
 
-			}
-			#profile:before			{
-				position: absolute;
-				top:0;
-				right: 0;
-				left:0;
-				bottom: 0;
-				border: 5px solid #2c3e50;
-    			border-radius: 7%;
-				content:" ";
-			}
-		</style>
+	}
+	.flexbox.column{
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-webkit-flex-direction: column;
+		-ms-flex-direction: column;
+		flex-direction: column;
+		height: 100%;
+	}
+	.flexbox.center
+	{
+		-webkit-box-align:center;
+		-moz-box-align:center;
+		align-items:center;
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script type="text/javascript">
+		-moz-justify-content:center;
+		-webkit-justify-content:center;
+		justify-content:center;
+	}
+	.flex-grow{
+		-webkit-box-flex: 1;
+		-webkit-flex: 1 0 auto;
+		-ms-flex: 1 0 auto;
+		flex: 1 0 auto;
+		justify-content: center;
+	}
+	.flex-no-shrink-no-grow{
+		-webkit-box-flex: 0;
+		-webkit-flex: 0 0 auto;
+		-ms-flex: 0 0 auto;
+		flex: 0 0 auto;
+	}
+	.flex-grow-shrink{
+		-webkit-box-flex: 1;
+		-webkit-flex: 1 1 0;
+		-ms-flex: 1 1 0;
+		flex: 1 1 0;
+	}
+	#profile{
+		width:150px;
+		height:150px;
+		background-image: url("https://scontent-mia1-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/12644861_10153901322974393_5731141098433000644_n.jpg?oh=734921cab8e496d074db48f605a83e0e&oe=572B81E8");
+		background-size: contain;
+		position: relative;
+		border-radius: 10%;
+		border: 2px solid #34495e;
+		display: inline-block;
 
-		</script>
-		
-	</head>
-	<body>
-		<div class="container padding">
-			<div class="main-box padding">
-				<h2>
-					<i class="fa fa-child"></i>
-					<span>Profile</span>
-				</h2>
-				<div class="row">
-					<div class="col-sm-4">
-						<div id="profile"></div>
-					</div>
-					<div class="col-sm-4">
-						<h3>GILLES YVETOT</h3>
-						<h4>Full Stack Developer</h4>
-						<h4>Project Manager</h4>
-					</div>
-					<div class="col-sm-4">
-						<div class="row">
-							<div class="col-xs-6 text-right">Address</div>
-							<div class="col-xs-6 text-left">
-								253 NE 2<sup>ND</sup>St<br/>
-								Unit 218 <br/>
-								Miami,FL 33132 FL
-							</div>
-						</div>
-					</div>
+	}
+	#profile:before			{
+		position: absolute;
+		top:0;
+		right: 0;
+		left:0;
+		bottom: 0;
+		border: 5px solid #2c3e50;
+		border-radius: 7%;
+		content:" ";
+	}
+	aside.flexbox.column {
+		float: left;
+		min-width: 200px;
+		overflow: hidden;
+		background: white;
+		height: 100vh;
+		min-width: 200px;
+		text-align: center;
+	}
+	
+	
+	.menu-item h2{
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-weight: bold;
+		font-size: 20px;
+		margin: 0 5px;
+	}
+	.line{
+		text-align: center;
+		position: relative;
+		border-bottom:1px solid #ccc;
+		width: 100%;
+		margin-bottom: 10px;
+		top: -10px;
+		margin: 0 10px;
+	}
+	.line >div{
+		min-width: 20px;
+		display: inline-block;
+		position: relative;
+		background: white;
+		top: 13px;
+		padding: 2px;
+	}
+	.line i{
+		padding: 0 4px 0 5px;
+	}
+
+	
+	main{
+		float: right;
+		width: 90%;
+		height: 100vh;
+		background: url("noise.png");
+		padding:20px;
+		overflow-x:hidden;
+		overflow-y:scroll;
+	}
+	main section >div:last-child{
+		padding-bottom: 10px;
+		border-bottom: 1px solid #ccc;
+	}
+	header{
+		text-align: center;
+
+	}
+	header h1{
+		text-transform: uppercase;
+		letter-spacing: 1px;
+	}
+	#contact-info{
+		/*heaxagon generated in svg by the fct below and then translated into data URI (width of250px)*/
+		background-image: url('data:image/svg+xml;utf8,<svg width="250" height="250" xmlns="http://www.w3.org/2000/svg" version="1.1"><polygon points="125,2 248,83 248,166 125,248 2,166 2,83 " style="stroke: #ccc; stroke-width: 1px; fill: none;"></polygon></svg>');
+		display: inline-block;
+		width: 250px;
+		height: 250px;
+		padding: 55px 0;
+	}
+	#contact-info > div{
+		display: inline-block;
+	}
+	#contact-info h3{
+		font-size: 30px;
+    	margin: 15px 0px;
+    	text-transform: uppercase;
+    	letter-spacing: -1px;
+
+	}
+	</style>
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
+	<script type="text/javascript">
+	function generateSVGhexagone(width){
+		if(!width || isNaN(width))
+			return null;
+
+		var svg= document.createElementNS("http://www.w3.org/2000/svg", "svg")
+		svg.setAttribute("width",width);
+		svg.setAttribute("height",width);
+		var poly = document.createElementNS("http://www.w3.org/2000/svg", "polygon");
+		poly.setAttribute("points",   parseInt(width/2)+ ",2 "
+									+parseInt(width-2)+","+parseInt(width/3)+" "
+									+parseInt(width-2)+","+parseInt(2*width/3)+" "
+									+parseInt(width/2)+","+parseInt(width-2)+" "
+									+"2,"+parseInt(2*width/3)+" "
+									+"2,"+parseInt(width/3)+" "
+						)
+		poly.style="stroke:#444;stroke-width:2;fill:none;"
+
+		svg.appendChild(poly);
+		document.getElementsByTagName("header")[0].appendChild(svg)
+	}
+	$(function(){
+		//generateSVGhexagone(250);
+	})
+
+	</script>
+
+</head>
+<body class="flexbox">
+	<aside class="flex-no-shrink-no-grow padding flexbox column center">
+		<a href="#" class="menu-item padding flex-grow-shrink flexbox column center">
+			<h2>About</h2>
+			<div class="line">
+				<div>
+					<i class="fa fa-television"></i>
 				</div>
 			</div>
-		</div>
-	</body>
+		</a>
+		<a href="#" class="menu-item padding flex-grow-shrink flexbox column center">
+			<h2>About</h2>
+			<div class="line">
+				<div>
+					<i class="fa fa-television"></i>
+				</div>
+			</div>
+		</a>
+		<a href="#" class="menu-item padding flex-grow-shrink flexbox column center">
+			<h2>About</h2>
+			<div class="line">
+				<div>
+					<i class="fa fa-television"></i>
+				</div>
+			</div>
+		</a>
+		
+	</aside>
+	<main class="flex-grow-shrink">
+		<header>
+			<div id="contact-info">
+				<div>
+					<a href="tel:+1(786)379-4110">
+						<i class="fa fa-phone-square"></i>&nbsp;
+						+1(786)379-4110
+					</a>
+				</div>
+				<div>
+					<a href="mailto:g.yvetot@gmail.com">
+						<i class="fa fa-envelope"></i>&nbsp;
+						g.yvetot@gmail.com
+					</a>
+				</div>
+				<h3>Gilles Yvetot</h3>
+				<div>
+					Working with <i class="fa fa-heart"></i><br/>
+					from Miami <i class="fa fa-sun-o"></i> to the <i class="fa fa-globe"></i>
+				</div>
+			</div>
+		</header>
+		<section class="row padding">
+			<h2 class="col-sm-2 col-sm-offset-1 padding">
+				Work Experiences</h2>
+			<div class="col-sm-8 col-sm-offset-1 padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</div>
+		</section>
+	</main>
+</body>
 </html>
