--- a/newR.html
+++ b/newR.html
@@ -261,6 +261,29 @@
 		<section class="row padding">
 			<h2 class="col-sm-2 col-sm-offset-1 padding">
 				Work Experiences</h2>
+			<div class="col-sm-8 col-sm-offset-1 padding">
+				<h4>The Cigar Lab Co.</h4>
+				<span class="work-title">Full Stack Developer</span>
+				<div>
+					<span class="work-date">January 15 - Present</span>
+					<span class="work-location">Miami, FL, USA</span>
+				</div>
+				<div class="work-desc">
+					Development of Cigar Scanner, #1 cigar app on iOS and Android, with 10K+ users.
+					<ul>
+						<li>
+							Devolpement of hybrid apps based on Ionic (Angular.js)
+						</li>
+						<li>
+							Developement and administration of an API based on .Net MVC API with a NoSQL database
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="row padding">
+			<h2 class="col-sm-2 col-sm-offset-1 padding">
+				Education</h2>
 			<div class="col-sm-8 col-sm-offset-1 padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
