--- a/newR.html
+++ b/newR.html
@@ -226,16 +226,49 @@
 	    float: right;
 	    font-style: italic;
 	    color: #222;
-	    font-size: 16px;
+	    font-size: 14px;
 	}
 	.work-desc{
+	}
+	.skill{
+		display: inline-block;
+		padding-right: 30px;
+		vertical-align: top;
 	}
 	</style>
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
+	<script type="text/javascript">
+		// smooth scrolling
+		$(function() {
+		  // $('a[href*="#"]:not([href="#"])').click(function() {
+		  //   if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+		  //     var target = $(this.hash);
+		  //     if (target.length) {
+		  //     	console.log(target.offset().top)
+		  //     	console.log(target)
+		  //       $('main').animate({
+		  //         scrollTop: target.offset().top
+		  //       }, 1000);
+		  //       return false;
+		  //     }
+		  //   }
+		  // });
+		// $('a').click(function() {
+		//     var href = $.attr(this, 'href');
+		//     $('main').animate({
+		//         scrollTop: $(href).offset().top
+		//     }, 900, function () {
+		//         window.location.hash = href;
+		//     });
+		//     return false;
+		// });
 
+		});
+
+	</script>
 	<script type="text/javascript">
 	function generateSVGhexagone(width){
 		if(!width || isNaN(width))
@@ -266,24 +299,24 @@
 </head>
 <body class="flexbox">
 	<aside class="flex-no-shrink-no-grow padding flexbox column center">
-		<a href="#" class="menu-item padding flex-grow-shrink flexbox column center">
-			<h2>About</h2>
+		<a href="#work" class="menu-item padding flex-grow-shrink flexbox column center">
+			<h2>Work Experiences</h2>
 			<div class="line">
 				<div>
 					<i class="fa fa-television"></i>
 				</div>
 			</div>
 		</a>
-		<a href="#" class="menu-item padding flex-grow-shrink flexbox column center">
-			<h2>About</h2>
+		<a href="#education" class="menu-item padding flex-grow-shrink flexbox column center">
+			<h2>Education</h2>
 			<div class="line">
 				<div>
 					<i class="fa fa-television"></i>
 				</div>
 			</div>
 		</a>
-		<a href="#" class="menu-item padding flex-grow-shrink flexbox column center">
-			<h2>About</h2>
+		<a href="#skills" class="menu-item padding flex-grow-shrink flexbox column center">
+			<h2>Skills</h2>
 			<div class="line">
 				<div>
 					<i class="fa fa-television"></i>
@@ -314,7 +347,7 @@
 				</div>
 			</div>
 		</header>
-		<section class="row padding section">
+		<section class="row padding section" id="work">
 				<h2 class="section-title padding">
 					Work Experiences
 				</h2>
@@ -409,7 +442,7 @@
 					</div>
 				</div>
 		</section>
-		<section class="row padding section">
+		<section class="row padding section" id="education">
 			<h2 class="padding section-title">
 				Education</h2>
 			<div class="section-content padding">
@@ -443,7 +476,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="row padding section">
+		<section class="row padding section" id="skills">
 			<h2 class="padding section-title">
 				Skills</h2>
 			<div class="section-content padding">
