--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+		crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway:500,300,700' rel='stylesheet' type='text/css'>
 	<link href='s.css' rel='stylesheet' type='text/css'>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+		crossorigin="anonymous"></script>
 	<script type="text/javascript">
 		// smooth scrolling
 		$(function() {
@@ -37,10 +40,9 @@
 		// });
 
 		});
-
 	</script>
 	<script type="text/javascript">
-	function generateSVGhexagone(width){
+		function generateSVGhexagone(width){
 		if(!width || isNaN(width))
 			return null;
 
@@ -63,10 +65,10 @@
 	$(window).ready(function(){
 		//generateSVGhexagone(250);
 	})
-
 	</script>
 
 </head>
+
 <body class="flexbox">
 	<aside class="flex-no-shrink-no-grow padding flexbox column center">
 		<a href="#work" class="menu-item padding flex-grow-shrink flexbox column center">
@@ -93,124 +95,126 @@
 				</div>
 			</div>
 		</a>
-		
+
 	</aside>
 	<main class="flex-grow-shrink">
 		<header>
 			<div id="contact-info">
 				<div>
 					<a href="tel:+1(786)379-4110">
-						<i class="fa fa-phone-square"></i>&nbsp;
-						+1(786)379-4110
+						<i class="fa fa-phone-square"></i>&nbsp; +1(786)379-4110
 					</a>
 				</div>
 				<div>
 					<a href="mailto:g.yvetot@gmail.com">
-						<i class="fa fa-envelope"></i>&nbsp;
-						g.yvetot@gmail.com
+						<i class="fa fa-envelope"></i>&nbsp; g.yvetot@gmail.com
 					</a>
 				</div>
 				<h3>Gilles Yvetot</h3>
 				<div>
-					Working with <i class="fa fa-heart"></i><br/>
-					from Miami <i class="fa fa-sun-o"></i> to the <i class="fa fa-globe"></i>
+					Working with <i class="fa fa-heart"></i><br/> from Miami <i class="fa fa-sun-o"></i> to the <i class="fa fa-globe"></i>
 				</div>
+			</div>
+			<div id="motivation">
+				Currently employed as a full stack developer, I am always looking for innovative projects and adventures, with passionate
+				people, to apply my skills in software/web programming and in project management.
 			</div>
 		</header>
 		<section class="row padding section" id="work">
-				<h2 class="section-title padding">
+			<h2 class="section-title padding">
 					Work Experiences
-				</h2>
-				<div class="padding section-content" >
-					<div class="work-exp">
-						<h4 class="company">The Cigar Lab Co.</h4>
-						<span class="work-location">Miami, FL, USA</span>
-						<div>
-							<span class="work-title">Full Stack Developer</span>
-							<span class="work-date">January 2015 - Present</span>
-						</div>
-						<div class="work-desc">
-							Development of Cigar Scanner, #1 cigar app on iOS and Android, with 10K+ users.
-							<ul>
-								<li>
-									Devolpement of hybrid apps based on Ionic (Angular.js)
-								</li>
-								<li>
-									Developement and maintenance of an API based on .Net MVC API with a NoSQL database
-								</li>
-							</ul>
-						</div>
+			</h2>
+			<div class="padding section-content">
+				<div class="work-exp">
+					<h4 class="company">The Cigar Lab Co.</h4>
+					<span class="work-location">Miami, FL, USA</span>
+					<div>
+						<span class="work-title">Full Stack Developer</span>
+						<span class="work-date">January 2015 - Present</span>
 					</div>
-					<div class="work-exp">
-						<h4  class="company">Vendilis</h4>
-						<span class="work-location">Miami, FL, USA</span>
-						<div>
-							<span class="work-title">Full Stack Developer</span>
-							<span class="work-date">April 2013 - December 2014</span>
-						</div>
-						<div class="work-desc">
-							Development of an e-commerce platform using ASP.Net, T-SQL
-							<ul>
-								<li>
-									Creation of a marketplace for retailers
-								</li>
-								<li>
-									Automation of processes (newsletter, reporting tools)
-								</li>
-								<li>
-									Responsive design with server-side components and cross-browser development
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="work-exp">
-						<h4 class="company">Emojam</h4>
-						<span class="work-location">Remotely</span>
-						<div>
-							<span class="work-title">Lead Backend</span>
-							<span class="work-date">Septembre 2014 - Septembre 2015</span>
-						</div>
-						<div class="work-desc">
-							Backend Creation and Administration, using Azure Cloud Services
-							<ul>
-								<li>
-									Development and administration of a RESTful API (.Net MVC) to serve mobile applications
-								</li>
-								<li>
-									Development and administration of a Back Office (.Net - Razor - Entity framework (CRUD))
-								</li>
-								<li>
-									Design and administration of the database (T-SQL)
-								</li>
-								<li>
-									Server administration
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="work-exp">
-						<h4 class="company">Airbus</h4>
-						<span class="work-date">June 2012 - July 2012</span>
-						<div>
-							<span class="work-title">Intern</span>
-							<span class="work-location">Toulouse, France</span>
-						</div>
-						<div class="work-desc">
-							Development of a software (Java) to remotely - via SNMP protocol - monitor the parameters of the avionic test benches
-						</div>
-					</div>
-					<div class="work-exp">
-						<h4 class="company">Cap Gemini</h4>
-						<span class="work-location">Toulouse, France</span>
-						<div>
-							<span class="work-title">Intern</span>
-							<span class="work-date">June 2011</span>
-						</div>
-						<div class="work-desc">
-							Business unit support and network cartography
-						</div>
+					<div class="work-desc">
+						Development of <a href="http://www.cigarscanner.com">Cigar Scanner</a>, #1 cigar app on iOS and Android, with 20K+
+						users.
+						<ul>
+							<li>
+								Devolpement of hybrid apps based on Ionic (Angular.js)
+							</li>
+							<li>
+								Developement and maintenance of an API based on .Net MVC API with a NoSQL database
+							</li>
+						</ul>
 					</div>
 				</div>
+				<div class="work-exp">
+					<h4 class="company">Vendilis</h4>
+					<span class="work-location">Miami, FL, USA</span>
+					<div>
+						<span class="work-title">Full Stack Developer</span>
+						<span class="work-date">April 2013 - December 2014</span>
+					</div>
+					<div class="work-desc">
+						Development of an e-commerce platform using ASP.Net, T-SQL
+						<ul>
+							<li>
+								Creation of a marketplace for retailers
+							</li>
+							<li>
+								Automation of processes (newsletter, reporting tools)
+							</li>
+							<li>
+								Responsive design with server-side components and cross-browser development
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="work-exp">
+					<h4 class="company">Emojam</h4>
+					<span class="work-location">Remotely</span>
+					<div>
+						<span class="work-title">Lead Backend</span>
+						<span class="work-date">Septembre 2014 - Septembre 2015</span>
+					</div>
+					<div class="work-desc">
+						Backend Creation and Administration, using Azure Cloud Services
+						<ul>
+							<li>
+								Development and administration of a RESTful API (.Net MVC) to serve mobile applications
+							</li>
+							<li>
+								Development and administration of a Back Office (.Net - Razor - Entity framework (CRUD))
+							</li>
+							<li>
+								Design and administration of the database (T-SQL)
+							</li>
+							<li>
+								Server administration
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="work-exp">
+					<h4 class="company">Airbus</h4>
+					<span class="work-date">June 2012 - July 2012</span>
+					<div>
+						<span class="work-title">Intern</span>
+						<span class="work-location">Toulouse, France</span>
+					</div>
+					<div class="work-desc">
+						Development of a software (Java) to remotely - via SNMP protocol - monitor the parameters of the avionic test benches
+					</div>
+				</div>
+				<div class="work-exp">
+					<h4 class="company">Cap Gemini</h4>
+					<span class="work-location">Toulouse, France</span>
+					<div>
+						<span class="work-title">Intern</span>
+						<span class="work-date">June 2011</span>
+					</div>
+					<div class="work-desc">
+						Business unit support and network cartography
+					</div>
+				</div>
+			</div>
 		</section>
 		<section class="row padding section" id="education">
 			<h2 class="padding section-title">
@@ -295,4 +299,5 @@
 		</section>
 	</main>
 </body>
+
 </html>
