--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<h2>Work Experiences</h2>
 			<div class="line">
 				<div>
-					<i class="fa fa-television"></i>
+					<i class="fa fa-briefcase"></i>
 				</div>
 			</div>
 		</a>
@@ -83,7 +83,7 @@
 			<h2>Education</h2>
 			<div class="line">
 				<div>
-					<i class="fa fa-television"></i>
+					<i class="fa fa-graduation-cap"></i>
 				</div>
 			</div>
 		</a>
@@ -91,7 +91,7 @@
 			<h2>Skills</h2>
 			<div class="line">
 				<div>
-					<i class="fa fa-television"></i>
+					<i class="fa fa-laptop"></i>
 				</div>
 			</div>
 		</a>
