--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
 								Devolpement of hybrid apps based on Ionic (Angular.js)
 							</li>
 							<li>
-								Developement and maintenance of an API based on .Net MVC API with a NoSQL database
+								Development and maintenance of an API based on .Net MVC API 2
+							</li>
+							<li>
+								Design and adminisitration of a noSQL database
+							</li>
+							<li>
+								Deployment on Microsoft Azure 
 							</li>
 						</ul>
 					</div>
