--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 								Development and maintenance of an API based on .Net MVC API 2
 							</li>
 							<li>
-								Design and adminisitration of a noSQL database
+								Design and administration of a noSQL database
 							</li>
 							<li>
 								Deployment on Microsoft Azure 
