--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								Devolpement of hybrid apps based on Ionic (Angular.js)
 							</li>
 							<li>
-								Development and maintenance of an API based on .Net MVC API 2
+								Development and maintenance of a public API based on .Net MVC 5 Web API 2
 							</li>
 							<li>
 								Design and administration of a noSQL database
